<resources>
    <string name="app_name">Partiu</string>
    <string name="action_settings">Settings</string>
    <string name="text_adicionaritemgarcom_titulopagina">Adicionar Item</string>
    <string name="btn_adicionaritemgarcom_add">+</string>
    <string name="btn_adicionaritemgarcom_sub">-</string>
    <string name="btn_adicionarcomanda">Adicionar</string>
    <string name="text_cardapiogarcom_titulopagina">Cardapio</string>
    <string name="text_cardapiogarcom_resumo">Resumo</string>
    <string name="text_cardapiogarcom_cardapio">Cardapio</string>
    <string name="text_cardapiogarcom_detalhesitem">Pão artesanal, queijo, calabresa, bacon, milho,
        1 salsicha, ervilha, maionese, batata palha</string>
    <string name="button_cardapiogarcom_carrinho">Carrinho</string>
    <string name="textview_comandagarcom_titulopagina">Comanda</string>
    <string name="text_comandagarcom_itensnacomanda">Itens na comanda</string>
    <string name="button_comandaGarcom_pedido">Pedido</string>
    <string name="textview_comandagarcom_totalcomanda">Total: </string>
    <string name="textview_comandagarcom_mesa">Mesa: </string>
    <string name="textview_comandagarcom_data">Entrada: </string>
    <string name="textview_comandagarcom_pessoascomanda">Integrantes: </string>
    <string name="textview_comandamesacliente_titulopagina">Comanda da Mesa</string>
    <string name="text_comandamesacliente_titulopagina">Comanda da mesa</string>
    <string name="textview_comandamesacliente_totalcomanda">Total: </string>
    <string name="textview_comandamesacliente_mesa">Mesa: </string>
    <string name="textview_comandamesacliente_data">Entrada: </string>
    <string name="textview_comandamesacliente_pessoascomanda">Integrantes: </string>
    <string name="text_editaritemgarcom_titulopagina">Detalhe do item</string>
    <string name="btn_editaritemgarcom_add">+</string>
    <string name="btn_editaritemgarcom_sub">-</string>
    <string name="text_editaritemgarcom_algumaobservacao">Alguma observação</string>
    <string name="btn_editaritemgarcom_remover">Remover</string>
    <string name="textview_explorarclientedetalhes_titulopagina">Detalhes do Estabelecimento</string>
    <string name="textview_explorarclientedetalhes_detalhe">Detalhe</string>
    <string name="textview_recomendacaodetalheendereco">Endereço</string>
    <string name="button_recomendacaodetalhevoltar">Voltar</string>
    <string name="textview_finalizarpedidocliente_titulopagina">Confirmar Pedido</string>
    <string name="textview_finalizarpedidocliente_total">Total</string>
    <string name="button_finalizarpedidocliente_confirmar">Confirmar</string>
    <string name="textview_finalizarpedidocliente_itensselecionados">Itens selecionados</string>
    <string name="textview_finalizarcomandagarcom_titulopagina">Resumo</string>
    <string name="textview_itemdetalhecomandagarcom_titulopagina">Item Selecionado</string>
    <string name="text_itemdetalhecomandagarcom_algumaobservacao">Observações</string>
    <string name="text_itemdetalhecomandagarcom_quantidade">Quantidade</string>
    <string name="text_itemdetalhecomandagarcom_status">Status</string>
    <string name="btn_itemdetalhecomandagarcom_remover">Remover item</string>
    <string name="btn_itemdetalhecomandagarcom_voltar">Voltar</string>
    <string name="text_login_bemvindo">Bem-vindo</string>
    <string name="text_login_continueparaentrar">Continue para entrar</string>
    <string name="text_login_novousuario">Novo usuário?</string>
    <string name="btn_login_entrar">Entrar</string>
    <string name="btn_login_esqueceusuasenha">Esqueceu sua senha?</string>
    <string name="btn_login_cadastrese">Cadastre-se</string>
    <string name="textview_pagamentoconfirmado_titulopagina">Pagamento Confirmado</string>
    <string name="textview_pagamentoconfirmado_descritivo1">ISSO AI!</string>
    <string name="textview_pagamentoconfirmado_descritivo2">SEU PAGAMENTO FOI CONFIRMADO!</string>
    <string name="button_pagamentoconfirmado_fechar">fechar</string>
    <string name="button_pagamentoconfirmado_feedback">feedback</string>
    <string name="textview_resumogarcom_titulopagina">Resumo</string>
    <string name="text_resumogarcom_total">Total</string>
    <string name="btn_resumogarcom_adicionarmaisitens">Adicionar mais itens</string>
    <string name="btn_resumogarcom_finalizarpedido">Finalizar Pedido</string>
    <string name="text_resumocomandagarcom_titulopagina">Resumo</string>
    <string name="text_resumocomandagarcom_total">Total</string>
    <string name="btn_resumocomandagarcom_adicionarmaisitens">Adicionar mais itens</string>
    <string name="button_resumogarcom_lancaritenscomanda">Confirmar pedido</string>
    <string name="textview_homegarcom_titulopagina">Partiu</string>
    <string name="button_homegarcom_comanda">Comanda</string>
    <string name="textview_perfilcliente_titulopagina">Perfil</string>
    <string name="text_bottombar_explorar">explorar</string>
    <string name="text_bottombar_comanda">Comanda</string>
    <string name="text_bottombar_perfil">Perfil</string>
    <string name="menu_sair">Sair</string>
    <string name="placeholder_endereco_de_email">endereço de e-mail</string>
    <string name="placeholder_senha">senha</string>
    <string name="btn_entrar">entrar</string>
    <string name="btn_enviar">enviar</string>
    <string name="btn_cadastrese">cadastre-se</string>
    <string name="btn_voltar">voltar</string>
    <string name="btn_tentar_novamente">tentar_novamente</string>
    <string name="btn_chamar_o_garcom">chamar o garçom</string>
    <string name="btn_salvar_e_continuar">salvar_e_continuar</string>
    <string name="btn_confirmar">confirmar</string>
    <string name="btn_esqueceu_sua_senha">esqueceu sua senha?</string>
    <string name="btn_alert_criar_comanda">criar comanda</string>
    <string name="btn_alert_cancelar">cancelar</string>
    <string name="btn_alert_ok_entendi">Ok, entendi!</string>
    <string name="link_esqueceu_sua_senha">esqueceu sua senha?</string>
    <string name="link_precisa_de_ajuda">precisa de ajuda?</string>
    <string name="section_selecione_o_metodo_de_pagamento">selecione o método de pagamento</string>
    <string name="tab_comanda">comanda</string>
    <string name="tab_grupo">grupo</string>
    <string name="title_esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="text1_esqueceu_sua_senha">Digite seu e-mail cadastrado para recuperar
        sua senha.</string>
    <string name="title_enviado_com_sucesso">Enviado com sucesso ;)</string>
    <string name="text1_enviado_com_sucesso">Enviamos sua senha para seu e-mail cadastrado.</string>
    <string name="title_erro1">OPS! E-mail não cadastrado :(</string>
    <string name="text1_erro1">Esse e-mail não foi encontrado na nossa base!
        Por favor digite novamente.</string>
    <string name="title_erro2">Descupe! Ocorreu um erro :(</string>
    <string name="text1_erro2">Não foi possível recuper sua senha.</string>
    <string name="title_erro3">Descupe! Ocorreu um erro :(</string>
    <string name="text1_erro3">Não foi possível recuper sua senha.
        Tente novamente mais tarde</string>
    <string name="title_comanda_codigo_da_mesa">código da comanda</string>
    <string name="text1_comanda_codigo_da_mesa">digite o código da comanda para entrar na comanda</string>
    <string name="title_comanda_vazia">comada vazia :(</string>
    <string name="text1_comanda_vazia">ainda não foram lançados nehum item nessa comanda</string>
    <string name="title_voce_ja_sera_atendido">você já será atendido ;)</string>
    <string name="text1_voce_ja_sera_atendido">o garçom já esta a caminho, aguade um momento</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="title_activity_recomendacao">RecomendacaoActivity</string>
    <string name="title_activity_recomendacao_detalhes">RecomendacaoDetalhesActivity</string>
    <string name="title_activity_erro_coneccao">ErroConeccaoActivity</string>
    <string name="title_activity_esqueceu_sua_senha">EsqueceuSuaSenhaActivity</string>
    <string name="title_activity_splash_screen_acitivy">SplashScreenAcitivy</string>
    <string name="title_activity_codigo_comanda">CodigoComandaActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_comanda_activiy">ComandaActiviy</string>
    <string name="title_alert_codigo_comanda_invalido">OPS! Algo esta errado</string>
    <string name="subtitle1_alert_codigo_comanda_invalido">Por favor digite o código da comanda para continuar</string>
    <string name="title_alert_criar_comanda">Selecione a mesa para gerar uma nova comanda:</string>
    <string name="subtitle1_alert_selecione_numero_mesa">Insirá o número da mesa para criar a comanda</string>
    <string name="title_alert_disponivel_em_breve">Em breve!</string>
    <string name="subtitle1_alert_disponivel_em_breve">Essa funcionalidade está disponível a partir
        da próxima Sprint. Agradecemos a compreensão</string>
    <string name="erro_login_email">Preencha com seu e-mail</string>
    <string name="erro_login_senha">Sua senha deve possuir mínimo 8 caracteres.</string>
    <string name="title_activity_visualizar_comanda">VisualizarComandaActivity</string>
    <string name="title_activity_detalhes_comanda_garcom">DetalhesComandaGarcomActivity</string>
    <string name="title_activity_comanda_vazia_garcom">ComandaVaziaGarcomActivity</string>
    <string name="bottom_navagation_recomendacao">recomendação</string>
    <string name="bottom_navagation_comanda">comanda</string>
    <string name="bottom_navagation_perfil">perfil</string>
    <string name="item_comanda_garcom_total_comanda">Total: </string>
    <string name="item_comanda_garcom_pessoas_comanda">Integrantes: </string>
    <string name="item_comanda_garcom_mesa">Mesa: </string>
    <string name="fab_extended_comanda">comanda</string>
    <string name="fab_extended_cardapio">cardápio</string>
    <string name="lancar_item_comanda_garcom_step_selecionar">Selecionar itens:</string>
    <string name="button_continuar_lancar_item_comanda_garcom_step_selecionar">continuar</string>
    <string name="button_confirmar_lancar_item_comanda_garcom_step_selecionar">confirmar</string>
    <string name="title_activity_lista_itens_lancar_comanda_garcom_step_selecionar">
        ListaItensLancarComandaGarcomStepSelecionarActivity
    </string>
    <string name="title_activity_pedido_confirmacao_garcom">PedidoConfirmacaoGarcomActivity</string>
    <string name="title_activity_pedido_finalizado_garcom">PedidoFinalizadoGarcom</string>
    <string name="text1_pedidofinalizadogarcom">Isso ai!</string>
    <string name="title_activity_cadastrocpf">Criar conta</string>
    <string name="textview_cadastrocpf_cpf">Qual o seu CPF?</string>
    <string name="textview_cadastrocpf_cpf_complemento">Precisamos dessa informação para caso você esqueça acesso</string>
    <string name="textview_cadastrocpf_telefone">Qual o seu telefone?</string>
    <string name="button_cadastrocpf_avancar">Avançar</string>
    <string name="textview_cadastrocpf_cpf_hint">000.000.000-00</string>
    <string name="textview_cadastrocpf_telefone_hint">(00) 00000-0000</string>
    <string name="title_activity_logincliente">Entrar</string>
    <string name="textview_logincliente_email">Seu e-mail?</string>
    <string name="textview_logincliente_senha">Sua senha?</string>
    <string name="button_logincliente_entrar">Entrar</string>
    <string name="textview_logincliente_email_hint">johndoe@mail.com</string>
    <string name="textview_logincliente_senha_hint">digite sua senha</string>
    <string name="textview_logincliente_emailcomplemento">Informe seu e-mail cadastrado</string>
    <string name="textview_logincliente_senhacomplemento">Informe sua senha com mais de 8 digitos</string>
</resources>