<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.LoginActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_login"
    android:background="@drawable/background"
    android:id="@+id/constraintLayoutLogin">

    <ImageView
        android:id="@+id/image_view_login_logo"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/colorFont"
        android:textColorHint="@color/colorFont"
        android:theme="@style/StyledTilEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_login_continueParaEntrar">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_text_login_email"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_weight=".75"
            android:hint="@string/placeholder_endereco_de_email"
            android:inputType="textWebEmailAddress"
            android:textAllCaps="false"
            android:textColor="@color/colorFont"
            android:textSize="16sp"
            android:textStyle="normal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_login_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:textColorHint="@color/colorFont"
        android:theme="@style/StyledTilEditText"
        app:counterMaxLength="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_login_email"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorFont">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_text_login_senha"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_alignParentBottom="true"
            android:layout_weight=".75"
            android:hint="@string/placeholder_senha"
            android:inputType="textPassword"

            android:maxLength="10"
            android:textAllCaps="false"
            android:textColor="@color/colorFont"
            android:textSize="16sp"
            android:textStyle="normal"
            tools:layout_editor_absoluteY="118dp"
            />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/button_login_entrar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/button_primary"
        android:onClick="onClickButtonLoginEntrar"
        android:text="@string/btn_login_entrar"
        android:textAllCaps="true"
        android:textColor="@color/branco"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_esqueceu_sua_senha" />

    <Button
        android:id="@+id/button_login_cadastrarse"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="108dp"
        android:background="@drawable/btn_link"
        android:gravity="left"
        android:onClick="onClickButtonLoginCadastrarse"
        android:text="@string/btn_login_cadastrese"
        android:textAllCaps="false"
        android:textColor="@color/colorFontPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login_entrar" />

    <Button
        android:id="@+id/button_esqueceu_sua_senha"
        android:layout_width="196dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/btn_link"
        android:gravity="right"
        android:onClick="onClickButtonLoginEsqueceuSuaSenha"
        android:text="@string/btn_login_esqueceusuasenha"
        android:textAllCaps="false"
        android:textColor="@color/cinza_20"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_login_senha" />

    <TextView
        android:id="@+id/textView_login_novousuario"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:text="@string/text_login_novousuario"
        android:textAllCaps="false"
        android:textColor="@color/cinza_20"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button_login_cadastrarse"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login_entrar" />

    <!-- Login progress -->

    <TextView
        android:id="@+id/textView_login_bemVindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:gravity="left"
        android:text="@string/text_login_bemvindo"
        android:textAllCaps="false"
        android:textColor="@color/branco"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_login_logo" />

    <TextView
        android:id="@+id/textView_login_continueParaEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="2dp"
        android:gravity="left"
        android:text="@string/text_login_continueparaentrar"
        android:textColor="@color/cinza_20"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_login_bemVindo" />


</android.support.constraint.ConstraintLayout>